2002-09-14 garlick
	* Renamed functions to use lower case module prefix.
	* Renamed client.[ch] -> server.[ch].
	* Renamed pm_string.[ch] -> string.[ch]
	* Renamed exit_error.[ch] -> error.[ch]
	* Indented inline comments.

2002-09-13 garlick
	* Ran indent -kr *.[ch] on everything in src except hostlist.[ch]
	  and list.[ch] 
	* Tagged src with after-indent.
	* Got rid of NDUMP code (deprecated debugging stuff).
	* Added "vi:softtabstop=4" to *.c

2002-09-12 garlick
	* Brian documented some problems in the top of TODO.
	* Chris cleaned up some type casting.
	* Chris fixed icebox.dev to add delay after cmds to prevent 
	  icebox "ERROR 5" (resource is busy).  This was causing "bulk" 
  	  commands to fail on MCR
	* Tagged powerman-1-0-1.

2002-09-06 dun
	* Fixed bug where downed network device would cause select to spin.

2002-08-16 auselton
	* Chris tells me he updated the date format in the "make rpm"
	  target stuff.
	* icebox.dev's script for PM_UPDATE_NODES now allows for a node
	  status of "2" (== "unavailable") in its expect.  This is in 
	  keeping with the change to the protocol in V3.0 of the icebox
	  firmware.
	* device.c (do_target_some) had a bug similar to that addressed 
	  by Gregg Hommes above.  If a plug does not have a node plugged
	  into it then a) it should be skipped when trying to determine
	  the targets for a device, and b) that is a sufficient condition 
	  for not using the "all" target on the device.

2002-08-14 garlick
	* Split baytech.dev into baytechF500.dev and baytechF501.dev.
 	  Our test baytech has the f/w rev F 5.00, and pengra baytechs have
	  rev F 5.01.  The latter prompts (Y/N)> after every power action.
	* Put back baytech.dev, documenting that prompting is configurable.

2002-08-10 hommes
	* Modify do_PMD_semantics() in device.c to set plug->node->p_state
	  and plug->node->n_state only if the plug is associated with node.
	  (previous behavior was assertion failure)